--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,7 @@ main {
       display: flex;
       flex-direction: column;
       justify-content: center;
+      
 }
  
 .welcome-page  {
@@ -52,7 +53,6 @@ main {
     justify-content: center;
     font-size: 30px;
     flex-direction: column;
-     
 }
 
 .welcome-page .title-question {
@@ -63,7 +63,6 @@ main {
 .content-text {
     display: flex;
     font-size: 16px;
-    flex: 50%;
     justify-content: center; /*why is this not working */
 }
 
@@ -159,4 +158,15 @@ main {
 }
 .initials-input {
     margin: 0 10px 0 10px;
+}
+
+.submit-btn {
+    outline: none;
+    border: none;
+    display: inline-block;
+    padding: 10px;
+    border-radius: 15px;
+    background-color: var(--purple);
+    color: var(--white);
+    cursor: pointer;
 }
