--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,9 +92,9 @@ main {
     color: var(--white);
     cursor: pointer;
 }
+/* WELCOME PAGE ENDS */
 
-/* MAIN QUESTION PAGE */
-
+/* QUESTION PAGE BEGINS */
 .question-page {
     display: flex;
     flex-direction: column;
@@ -128,7 +128,6 @@ main {
     font-size: 14px;
 }
 
-
 .answer-result {
     border-top: solid, color var(--grey);
     color: var(--grey)
@@ -143,7 +142,9 @@ main {
 .btn-answer:hover, .reg-btn:hover, .start-btn:hover {
     background-color: var(--pink);
 }
+/* ENDS QUESTION PAGE */
 
+/*FINAL SCORE PAGE BEGINS */
 .final-score-content{
     display: flex;
     justify-content: left;
@@ -154,8 +155,8 @@ main {
 .enter-initials {
     display: flex;
     flex-wrap: flex;
-    
 }
+
 .initials-input {
     margin: 0 10px 0 10px;
 }
@@ -170,3 +171,4 @@ main {
     color: var(--white);
     cursor: pointer;
 }
+/* END FINAL SCORE PAGE */
